improve new lines

--- a/article/天堂寨三日游.md
+++ b/article/天堂寨三日游.md
@@ -12,7 +12,7 @@
 
 白马峰栈道
 
-[<img style="background-image: none; border-bottom: 0px; border-left: 0px; padding-left: 0px; padding-right: 0px; display: inline; border-top: 0px; border-right: 0px; padding-top: 0px" title="DSC02206" border="0" alt="DSC02206" src="http://up.kfstorm.com/blog/images/810299233c05_13E63/DSC02206_thumb.jpg" width="500" height="352" />](http://up.kfstorm.com/blog/images/810299233c05_13E63/DSC02206.jpg)
+<!--more--><p>[<img style="background-image: none; border-bottom: 0px; border-left: 0px; padding-left: 0px; padding-right: 0px; display: inline; border-top: 0px; border-right: 0px; padding-top: 0px" title="DSC02206" border="0" alt="DSC02206" src="http://up.kfstorm.com/blog/images/810299233c05_13E63/DSC02206_thumb.jpg" width="500" height="352" />](http://up.kfstorm.com/blog/images/810299233c05_13E63/DSC02206.jpg)
 
 白马峰栈道
 
