--- a/article/扫雷机器人.md
+++ b/article/扫雷机器人.md
@@ -2,25 +2,17 @@
 
 今天心情好，为大家奉上两年前写的一个小玩意儿：扫雷机器人。扫雷机器人的用途当然就是自动扫雷了，需要Windows 7系统的扫雷（Vista的扫雷可能也可以，因为好像和Win7的长的一样，没测试过）。使用方法是打开扫雷与扫雷机器人，在扫雷中设置好你想玩的难度，并使扫雷机器人中的难度设置保持一致。扫雷机器人中的动画设置也必须与扫雷一致。在扫雷机器人中点击“开始新局”就开始自动扫雷了。
 
-&nbsp;
-
 [<img title="" style="border-top: 0px; border-right: 0px; background-image: none; border-bottom: 0px; padding-top: 0px; padding-left: 0px; border-left: 0px; display: inline; padding-right: 0px" border="0" alt="" src="http://up.kfstorm.com/blog/images/7a23c4d1022c_13B65/_thumb.jpg" width="504" height="258">](http://up.kfstorm.com/blog/images/7a23c4d1022c_13B65/472fec68533b.jpg)
 
-[点此查看扫雷动画](http://up.kfstorm.com/MinesweeperRobot_Animation.gif)
-
-&nbsp;
+<!--more--><p>[点此查看扫雷动画](http://up.kfstorm.com/MinesweeperRobot_Animation.gif)
 
 [下载地址](http://up.kfstorm.com/MinesweeperRobot.exe)
 
-&nbsp;
-
 注意：
+
  - 扫雷必须使用默认的蓝色方块样式。 - 点击“开始新局”时扫雷必须处于刚开始一个新局的状态。（不能是重玩状态，不能打开设置窗口） - 自动扫雷时不要乱动鼠标。 - 有极小几率识别错误。
-&nbsp;
 
 扫雷机器人的原理是，截取图像识别扫雷窗口中各个方块的数字（不是偷看内存哦，不是作弊哦），并利用我的算法决定哪些方块可以安全点开（我可以自信的说，这个算法可以正确点开绝大多数人不敢点开的方块）。
-
-&nbsp;
 
 博主一向无私，所以我把扫雷机器人的代码打包上传了，供大家研究（高手轻拍）。
 
