--- a/article/豆瓣电台1-0-0发布.md
+++ b/article/豆瓣电台1-0-0发布.md
@@ -9,9 +9,9 @@
 1.0.0    <br />新增DJ频道，音量控制，可选择触发封面滑动的方式。
 
 截图：
-<td style='outline:none;width:auto;border-style:none;margin:0;padding:0;'>[<img style="outline:none;border:0;background:none;background-image:none;vertical-align:bottom;border-style:none;margin:0;padding:0;" alt="查看相册" title="查看相册" src="/Users/K.F.Storm/AppData/Local/Temp/WindowsLiveWriter-429641856/supfiles1C98177/豆瓣电台[1].jpg" />](https://skydrive.live.com/redir.aspx?cid=559a9c41b65330ec&amp;page=play&amp;resid=559A9C41B65330EC!282&amp;type=5&amp;authkey=F1EKvqmsrCA%24&amp;Bsrc=Photomail&amp;Bpub=SDX.Photos)                                            [豆瓣电台](https://skydrive.live.com/redir.aspx?cid=559a9c41b65330ec&amp;page=browse&amp;resid=559A9C41B65330EC!282&amp;type=5&amp;authkey=F1EKvqmsrCA%24&amp;Bsrc=Photomail&amp;Bpub=SDX.Photos)                                                                                            <table border="0" cellspacing="0" cellpadding="0" style="text-align:center;width:auto;margin-left:auto;margin-right:auto;outline:none;border-collapse:collapse;border-style:none;padding:0;">                                     <tr>                                       <td style="vertical-align:top;outline:none;border-style:none;margin:0;padding:6px 12px 6px 0;">[播放幻灯片](https://skydrive.live.com/redir.aspx?cid=559a9c41b65330ec&amp;page=play&amp;resid=559A9C41B65330EC!282&amp;type=5&amp;authkey=F1EKvqmsrCA%24&amp;Bsrc=Photomail&amp;Bpub=SDX.Photos)</td>                                       <td style="vertical-align:top;outline:none;border-style:none;margin:0;padding:6px 0;">[全部下载](https://skydrive.live.com/redir.aspx?cid=559a9c41b65330ec&amp;page=downloadphotos&amp;resid=559A9C41B65330EC!282&amp;type=5&amp;Bsrc=Photomail&amp;Bpub=SDX.Photos&amp;authkey=F1EKvqmsrCA%24)</td>                                                                            
 
-下载链接：
+<table border="0" cellspacing="0" cellpadding="0" style='outline:none;width:410px;border-collapse:collapse;border-style:none;margin:0;padding:0;'><tbody><td style='outline:none;width:auto;border-style:none;margin:0;padding:0;'>[<img style="outline:none;border:0;background:none;background-image:none;vertical-align:bottom;border-style:none;margin:0;padding:0;" alt="查看相册" title="查看相册" src="/Users/K.F.Storm/AppData/Local/Temp/WindowsLiveWriter-429641856/supfiles1C98177/豆瓣电台[1].jpg" />](https://skydrive.live.com/redir.aspx?cid=559a9c41b65330ec&amp;page=play&amp;resid=559A9C41B65330EC!282&amp;type=5&amp;authkey=F1EKvqmsrCA%24&amp;Bsrc=Photomail&amp;Bpub=SDX.Photos)                                            [豆瓣电台](https://skydrive.live.com/redir.aspx?cid=559a9c41b65330ec&amp;page=browse&amp;resid=559A9C41B65330EC!282&amp;type=5&amp;authkey=F1EKvqmsrCA%24&amp;Bsrc=Photomail&amp;Bpub=SDX.Photos)                                                                                            <table border="0" cellspacing="0" cellpadding="0" style="text-align:center;width:auto;margin-left:auto;margin-right:auto;outline:none;border-collapse:collapse;border-style:none;padding:0;">                                     <tr>                                       <td style="vertical-align:top;outline:none;border-style:none;margin:0;padding:6px 12px 6px 0;">[播放幻灯片](https://skydrive.live.com/redir.aspx?cid=559a9c41b65330ec&amp;page=play&amp;resid=559A9C41B65330EC!282&amp;type=5&amp;authkey=F1EKvqmsrCA%24&amp;Bsrc=Photomail&amp;Bpub=SDX.Photos)</td>                                       <td style="vertical-align:top;outline:none;border-style:none;margin:0;padding:6px 0;">[全部下载](https://skydrive.live.com/redir.aspx?cid=559a9c41b65330ec&amp;page=downloadphotos&amp;resid=559A9C41B65330EC!282&amp;type=5&amp;Bsrc=Photomail&amp;Bpub=SDX.Photos&amp;authkey=F1EKvqmsrCA%24)</td>                                                                            
+                                   </table>                                                                                                                                                                                                                       </td></tr></tbody></table>  <p>下载链接：
 
 [http://u.115.com/file/bhazoion#DoubanFMSetup.msi](http://u.115.com/file/bhazoion#DoubanFMSetup.msi)
 
