--- a/article/豆瓣电台1-2-5发布.md
+++ b/article/豆瓣电台1-2-5发布.md
@@ -6,7 +6,7 @@
 
 1、修复当要下载的封面之前已经下载过时，不会更换封面的BUG。
 
-&#160;
+<!--more--><p>&#160;
 
 截图：
 
@@ -20,7 +20,7 @@
 
 [http://v.youku.com/v_show/id_XMzAwNDgyNjg0.html](http://v.youku.com/v_show/id_XMzAwNDgyNjg0.html)
 
-&#160;
+<embed src="http://player.youku.com/player.php/sid/XMzAwNDgyNjg0/v.swf" allowFullScreen="true" quality="high" width="480" height="400" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed>   <p>&#160;
 
 下载地址：
 
