--- a/article/豆瓣电台1-5-0-beta2发布.md
+++ b/article/豆瓣电台1-5-0-beta2发布.md
@@ -10,7 +10,7 @@
 
 [<img style="background-image: none; border-bottom: 0px; border-left: 0px; padding-left: 0px; padding-right: 0px; display: inline; border-top: 0px; border-right: 0px; padding-top: 0px" title="image1" border="0" alt="image1" src="http://up.kfstorm.com/blog/images/1.5.0-Beta2_11F52/image1_thumb.jpg" width="500" height="281" />](http://up.kfstorm.com/blog/images/1.5.0-Beta2_11F52/image1.jpg)
 
-更新说明：
+<!--more--><p>更新说明：
 
 1.5.0 Beta2 (2011-11-07)
 
