--- a/article/豆瓣电台1-2-3发布.md
+++ b/article/豆瓣电台1-2-3发布.md
@@ -6,7 +6,7 @@
 
 1、修复搜索结果中始终没有艺术家的BUG。
 
-&#160;
+<!--more--><p>&#160;
 
 [<img style="background-image: none; border-bottom: 0px; border-left: 0px; padding-left: 0px; padding-right: 0px; display: inline; border-top: 0px; border-right: 0px; padding-top: 0px" title="image18" border="0" alt="image18" src="http://up.kfstorm.com/blog/images/1.2.3_1380F/image18_thumb.jpg" width="500" height="251" />](http://up.kfstorm.com/blog/images/1.2.3_1380F/image18.jpg)
 
