--- a/article/豆瓣电台1-2-4发布.md
+++ b/article/豆瓣电台1-2-4发布.md
@@ -12,7 +12,7 @@
 
 4、默认关闭窗口阴影。
 
-&#160;
+<!--more--><p>&#160;
 
 截图：
 
@@ -28,7 +28,7 @@
 
 [http://v.youku.com/v_show/id_XMzAwNDgyNjg0.html](http://v.youku.com/v_show/id_XMzAwNDgyNjg0.html)
 
-&#160;
+<object width="480" height="400" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0"> <param name="src" value="http://player.youku.com/player.php/sid/XMzAwNDgyNjg0/v.swf" /> <param name="allowfullscreen" value="true" /> <param name="quality" value="high" /> <param name="allowscriptaccess" value="always" /> <embed width="480" height="400" type="application/x-shockwave-flash" src="http://player.youku.com/player.php/sid/XMzAwNDgyNjg0/v.swf" allowfullscreen="true" quality="high" allowscriptaccess="always" /></object>  <p>&#160;
 
 下载地址：
 
