--- a/article/豆瓣电台2-0-6发布！.md
+++ b/article/豆瓣电台2-0-6发布！.md
@@ -4,7 +4,7 @@
 
  <form action="http://doubanfmcloud.sinaapp.com/publish/doubanfm.application"> <p><input type="submit" value="立即使用"> 
 
-[<img title="DoubanFM_2.0.6" style="border-left-width: 0px; border-right-width: 0px; background-image: none; border-bottom-width: 0px; padding-top: 0px; padding-left: 0px; display: inline; padding-right: 0px; border-top-width: 0px" border="0" alt="DoubanFM_2.0.6" src="http://up.kfstorm.com/blog/images/2.0.6_1039C/DoubanFM_2.0.6_thumb.jpg" width="644" height="225">](http://up.kfstorm.com/blog/images/2.0.6_1039C/DoubanFM_2.0.6.jpg)
+</form> <p>[<img title="DoubanFM_2.0.6" style="border-left-width: 0px; border-right-width: 0px; background-image: none; border-bottom-width: 0px; padding-top: 0px; padding-left: 0px; display: inline; padding-right: 0px; border-top-width: 0px" border="0" alt="DoubanFM_2.0.6" src="http://up.kfstorm.com/blog/images/2.0.6_1039C/DoubanFM_2.0.6_thumb.jpg" width="644" height="225">](http://up.kfstorm.com/blog/images/2.0.6_1039C/DoubanFM_2.0.6.jpg)
 
 # 更新说明
 
