--- a/article/豆瓣电台2-0-7发布！.md
+++ b/article/豆瓣电台2-0-7发布！.md
@@ -4,11 +4,9 @@
 
 <input type="submit" value="立即使用"> 
 
-# [<img title="DoubanFM_2.0.7" style="border-top: 0px; border-right: 0px; background-image: none; border-bottom: 0px; padding-top: 0px; padding-left: 0px; border-left: 0px; display: inline; padding-right: 0px" border="0" alt="DoubanFM_2.0.7" src="http://up.kfstorm.com/blog/images/2.0.7_11A5A/DoubanFM_2.0.7_thumb.jpg" width="644" height="387">](http://up.kfstorm.com/blog/images/2.0.7_11A5A/DoubanFM_2.0.7.jpg)
+</form> <h1>[<img title="DoubanFM_2.0.7" style="border-top: 0px; border-right: 0px; background-image: none; border-bottom: 0px; padding-top: 0px; padding-left: 0px; border-left: 0px; display: inline; padding-right: 0px" border="0" alt="DoubanFM_2.0.7" src="http://up.kfstorm.com/blog/images/2.0.7_11A5A/DoubanFM_2.0.7_thumb.jpg" width="644" height="387">](http://up.kfstorm.com/blog/images/2.0.7_11A5A/DoubanFM_2.0.7.jpg)</h1> <h1>更新说明</h1> <p>1、全新的默认桌面歌词样式。
 
 # 更新说明
-
-1、全新的默认桌面歌词样式。
 
 2、新增英文界面支持。
 
