improve new lines

--- a/article/扫雷机器人.md
+++ b/article/扫雷机器人.md
@@ -4,7 +4,7 @@
 
 [<img title="" style="border-top: 0px; border-right: 0px; background-image: none; border-bottom: 0px; padding-top: 0px; padding-left: 0px; border-left: 0px; display: inline; padding-right: 0px" border="0" alt="" src="/attachment/up/blog/images/7a23c4d1022c_13B65/thumb.jpg" width="504" height="258">](/attachment/up/blog/images/7a23c4d1022c_13B65/472fec68533b.jpg)
 
-<!--more--><p>[点此查看扫雷动画](/attachment/up/MinesweeperRobot_Animation.gif)
+[点此查看扫雷动画](/attachment/up/MinesweeperRobot_Animation.gif)
 
 [下载地址](/attachment/up/MinesweeperRobot.exe)
 
