--- a/article/豆瓣电台1-2-4发布.md
+++ b/article/豆瓣电台1-2-4发布.md
@@ -12,8 +12,6 @@
 
 4、默认关闭窗口阴影。
 
-<!--more--><p>&#160;
-
 截图：
 
 [<img style="background-image: none; border-bottom: 0px; border-left: 0px; padding-left: 0px; padding-right: 0px; display: inline; border-top: 0px; border-right: 0px; padding-top: 0px" title="image" border="0" alt="image" src="/attachment/up/blog/images/1.2.4_138BA/image_thumb.jpg" width="500" height="251" />](/attachment/up/blog/images/1.2.4_138BA/image.jpg)
@@ -22,13 +20,11 @@
 
 [<img style="background-image: none; border-bottom: 0px; border-left: 0px; padding-left: 0px; padding-right: 0px; display: inline; border-top: 0px; border-right: 0px; padding-top: 0px" title="image2" border="0" alt="image2" src="/attachment/up/blog/images/1.2.4_138BA/image2_thumb.jpg" width="500" height="251" />](/attachment/up/blog/images/1.2.4_138BA/image2.jpg)
 
-&#160;
-
 功能演示视频：
 
 [http://v.youku.com/v_show/id_XMzAwNDgyNjg0.html](http://v.youku.com/v_show/id_XMzAwNDgyNjg0.html)
 
-<object width="480" height="400" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0"> <param name="src" value="http://player.youku.com/player.php/sid/XMzAwNDgyNjg0/v.swf" /> <param name="allowfullscreen" value="true" /> <param name="quality" value="high" /> <param name="allowscriptaccess" value="always" /> <embed width="480" height="400" type="application/x-shockwave-flash" src="http://player.youku.com/player.php/sid/XMzAwNDgyNjg0/v.swf" allowfullscreen="true" quality="high" allowscriptaccess="always" /></object>  <p>&#160;
+<object width="480" height="400" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0"> <param name="src" value="http://player.youku.com/player.php/sid/XMzAwNDgyNjg0/v.swf" /> <param name="allowfullscreen" value="true" /> <param name="quality" value="high" /> <param name="allowscriptaccess" value="always" /> <embed width="480" height="400" type="application/x-shockwave-flash" src="http://player.youku.com/player.php/sid/XMzAwNDgyNjg0/v.swf" allowfullscreen="true" quality="high" allowscriptaccess="always" /></object>
 
 下载地址：
 
