--- a/article/豆瓣电台1-2-5发布.md
+++ b/article/豆瓣电台1-2-5发布.md
@@ -6,8 +6,6 @@
 
 1、修复当要下载的封面之前已经下载过时，不会更换封面的BUG。
 
-<!--more--><p>&#160;
-
 截图：
 
 [<img style="background-image: none; border-bottom: 0px; border-left: 0px; padding-left: 0px; padding-right: 0px; display: inline; border-top: 0px; border-right: 0px; padding-top: 0px" title="image" border="0" alt="image" src="/attachment/up/blog/images/1.2.5_1396F/image_thumb.jpg" width="500" height="251" />](/attachment/up/blog/images/1.2.5_1396F/image.jpg)
@@ -20,7 +18,7 @@
 
 [http://v.youku.com/v_show/id_XMzAwNDgyNjg0.html](http://v.youku.com/v_show/id_XMzAwNDgyNjg0.html)
 
-<embed src="http://player.youku.com/player.php/sid/XMzAwNDgyNjg0/v.swf" allowFullScreen="true" quality="high" width="480" height="400" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed>   <p>&#160;
+<embed src="http://player.youku.com/player.php/sid/XMzAwNDgyNjg0/v.swf" allowFullScreen="true" quality="high" width="480" height="400" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed>
 
 下载地址：
 
