--- a/article/豆瓣电台1-5-0-beta2发布.md
+++ b/article/豆瓣电台1-5-0-beta2发布.md
@@ -10,7 +10,7 @@
 
 [<img style="background-image: none; border-bottom: 0px; border-left: 0px; padding-left: 0px; padding-right: 0px; display: inline; border-top: 0px; border-right: 0px; padding-top: 0px" title="image1" border="0" alt="image1" src="/attachment/up/blog/images/1.5.0-Beta2_11F52/image1_thumb.jpg" width="500" height="281" />](/attachment/up/blog/images/1.5.0-Beta2_11F52/image1.jpg)
 
-<!--more--><p>更新说明：
+更新说明：
 
 1.5.0 Beta2 (2011-11-07)
 
@@ -23,7 +23,5 @@
 4、小幅界面修改。
 
 5、增加“显示/隐藏 歌词”的热键。
-
-&#160;
 
 详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
