--- a/article/豆瓣电台2-0-2发布-.md
+++ b/article/豆瓣电台2-0-2发布-.md
@@ -4,4 +4,13 @@
 
 [下载地址](http://doubanfmcloud-client.stor.sinaapp.com/DoubanFMSetup_2.0.2.exe)
 
-[备用下载地址](http://dl.dbank.com/c0aq5bsqdf) <h1>更新说明</h1> <p>1、增加导入导出设置的功能。 <p>2、DJ兆赫每次只显示10条，滚动到最后时加载后10条。 <p>3、修复.NET 4.5(Windows 8)中可能不会更换封面的问题。 <p>4、拖拽窗口时封面不会滑动。 <p>5、鼠标移开左面板时封面自动左滑。 <p>6、改善与Windows 8的兼容性。 <p>7、修复升级到2.0.1版本时已登录会变为未登录的问题。 <p>8、搜索DJ兆赫时大小写不敏感。 <p>详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
+[备用下载地址](http://dl.dbank.com/c0aq5bsqdf) <h1>更新说明</h1>
+<p>1、增加导入导出设置的功能。
+<p>2、DJ兆赫每次只显示10条，滚动到最后时加载后10条。
+<p>3、修复.NET 4.5(Windows 8)中可能不会更换封面的问题。
+<p>4、拖拽窗口时封面不会滑动。
+<p>5、鼠标移开左面板时封面自动左滑。
+<p>6、改善与Windows 8的兼容性。
+<p>7、修复升级到2.0.1版本时已登录会变为未登录的问题。
+<p>8、搜索DJ兆赫时大小写不敏感。
+<p>详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
