--- a/article/豆瓣电台2-0-8发布-.md
+++ b/article/豆瓣电台2-0-8发布-.md
@@ -8,7 +8,7 @@
 
 <input type="submit" value="立即使用" />
 
-</form>&nbsp;
+</form>
 
 PS：无法打开.application格式的用户，或者嫌ClickOnce安装麻烦、不够自由的用户，可以下载这个独立安装程序：[http://doubanfmcloud-client.stor.sinaapp.com/DoubanFMSetup_2.0.8.0.exe](http://doubanfmcloud-client.stor.sinaapp.com/DoubanFMSetup_2.0.8.0.exe)。注意，使用这种独立安装程序将无法自动更新，我也不一定会每个版本都发布独立安装程序。
 
