--- a/article/天堂寨三日游.md
+++ b/article/天堂寨三日游.md
@@ -6,53 +6,37 @@
 
 坑爹啊，坑爹啊，本来可以两天就搞定的，结果用了三天……
 
-&#160;
-
 [<img style="background-image: none; border-bottom: 0px; border-left: 0px; padding-left: 0px; padding-right: 0px; display: inline; border-top: 0px; border-right: 0px; padding-top: 0px" title="DSC02170" border="0" alt="DSC02170" src="/attachment/up/blog/images/810299233c05_13E63/DSC02170_thumb.jpg" width="500" height="263" />](/attachment/up/blog/images/810299233c05_13E63/DSC02170.jpg)
 
 白马峰栈道
 
-<!--more--><p>[<img style="background-image: none; border-bottom: 0px; border-left: 0px; padding-left: 0px; padding-right: 0px; display: inline; border-top: 0px; border-right: 0px; padding-top: 0px" title="DSC02206" border="0" alt="DSC02206" src="/attachment/up/blog/images/810299233c05_13E63/DSC02206_thumb.jpg" width="500" height="352" />](/attachment/up/blog/images/810299233c05_13E63/DSC02206.jpg)
+[<img style="background-image: none; border-bottom: 0px; border-left: 0px; padding-left: 0px; padding-right: 0px; display: inline; border-top: 0px; border-right: 0px; padding-top: 0px" title="DSC02206" border="0" alt="DSC02206" src="/attachment/up/blog/images/810299233c05_13E63/DSC02206_thumb.jpg" width="500" height="352" />](/attachment/up/blog/images/810299233c05_13E63/DSC02206.jpg)
 
 白马峰栈道
-
-&#160;
 
 [<img style="background-image: none; border-bottom: 0px; border-left: 0px; padding-left: 0px; padding-right: 0px; display: inline; border-top: 0px; border-right: 0px; padding-top: 0px" title="DSC02184" border="0" alt="DSC02184" src="/attachment/up/blog/images/810299233c05_13E63/DSC02184_thumb.jpg" width="500" height="281" />](/attachment/up/blog/images/810299233c05_13E63/DSC02184.jpg)
 
 白马大峡谷
 
-&#160;
-
 [<img style="background-image: none; border-bottom: 0px; border-left: 0px; padding-left: 0px; padding-right: 0px; display: inline; border-top: 0px; border-right: 0px; padding-top: 0px" title="DSC02320" border="0" alt="DSC02320" src="/attachment/up/blog/images/810299233c05_13E63/DSC02320_thumb.jpg" width="374" height="500" />](/attachment/up/blog/images/810299233c05_13E63/DSC02320.jpg)
 
 瀑布
-
-&#160;
 
 [<img style="background-image: none; border-bottom: 0px; border-left: 0px; padding-left: 0px; padding-right: 0px; display: inline; border-top: 0px; border-right: 0px; padding-top: 0px" title="DSC02363" border="0" alt="DSC02363" src="/attachment/up/blog/images/810299233c05_13E63/DSC02363_thumb.jpg" width="500" height="375" />](/attachment/up/blog/images/810299233c05_13E63/DSC02363.jpg)
 
 海拔1605米
 
-&#160;
-
 [<img style="background-image: none; border-bottom: 0px; border-left: 0px; padding-left: 0px; padding-right: 0px; display: inline; border-top: 0px; border-right: 0px; padding-top: 0px" title="DSC02395" border="0" alt="DSC02395" src="/attachment/up/blog/images/810299233c05_13E63/DSC02395_thumb.jpg" width="500" height="375" />](/attachment/up/blog/images/810299233c05_13E63/DSC02395.jpg)
 
 从湖北下山
-
-&#160;
 
 [<img style="background-image: none; border-bottom: 0px; border-left: 0px; padding-left: 0px; padding-right: 0px; display: inline; border-top: 0px; border-right: 0px; padding-top: 0px" title="DSC02403" border="0" alt="DSC02403" src="/attachment/up/blog/images/810299233c05_13E63/DSC02403_thumb.jpg" width="500" height="375" />](/attachment/up/blog/images/810299233c05_13E63/DSC02403.jpg)
 
 猪
 
-&#160;
-
 [<img style="background-image: none; border-bottom: 0px; border-left: 0px; padding-left: 0px; padding-right: 0px; display: inline; border-top: 0px; border-right: 0px; padding-top: 0px" title="DSC02426" border="0" alt="DSC02426" src="/attachment/up/blog/images/810299233c05_13E63/DSC02426_thumb.jpg" width="500" height="375" />](/attachment/up/blog/images/810299233c05_13E63/DSC02426.jpg)
 
 孙悟空
-
-&#160;
 
 [<img style="background-image: none; border-bottom: 0px; border-left: 0px; padding-left: 0px; padding-right: 0px; display: inline; border-top: 0px; border-right: 0px; padding-top: 0px" title="IMG_0079" border="0" alt="IMG_0079" src="/attachment/up/blog/images/810299233c05_13E63/IMG_0079_thumb.jpg" width="369" height="500" />](/attachment/up/blog/images/810299233c05_13E63/IMG_0079.jpg)
 
