--- a/article/豆瓣电台1-4-0发布.md
+++ b/article/豆瓣电台1-4-0发布.md
@@ -6,7 +6,7 @@
 
 [<img style="background-image: none; border-bottom: 0px; border-left: 0px; padding-left: 0px; padding-right: 0px; display: inline; border-top: 0px; border-right: 0px; padding-top: 0px" title="image11" border="0" alt="image11" src="/attachment/up/blog/images/1.4.0_13BF7/image11_thumb.jpg" width="500" height="251" />](/attachment/up/blog/images/1.4.0_13BF7/image11.jpg)
 
-<!--more--><p>[<img style="background-image: none; border-bottom: 0px; border-left: 0px; padding-left: 0px; padding-right: 0px; display: inline; border-top: 0px; border-right: 0px; padding-top: 0px" title="image12" border="0" alt="image12" src="/attachment/up/blog/images/1.4.0_13BF7/image12_thumb.jpg" width="500" height="251" />](/attachment/up/blog/images/1.4.0_13BF7/image12.jpg)
+[<img style="background-image: none; border-bottom: 0px; border-left: 0px; padding-left: 0px; padding-right: 0px; display: inline; border-top: 0px; border-right: 0px; padding-top: 0px" title="image12" border="0" alt="image12" src="/attachment/up/blog/images/1.4.0_13BF7/image12_thumb.jpg" width="500" height="251" />](/attachment/up/blog/images/1.4.0_13BF7/image12.jpg)
 
 [<img style="background-image: none; border-bottom: 0px; border-left: 0px; padding-left: 0px; padding-right: 0px; display: inline; border-top: 0px; border-right: 0px; padding-top: 0px" title="image13" border="0" alt="image13" src="/attachment/up/blog/images/1.4.0_13BF7/image13_thumb.jpg" width="500" height="251" />](/attachment/up/blog/images/1.4.0_13BF7/image13.jpg)
 
@@ -17,7 +17,5 @@
 1、支持自定义热键。
 
 2、增加歌词同步显示。
-
-&#160;
 
 详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
