--- a/article/豆瓣电台1-5-0正式版发布.md
+++ b/article/豆瓣电台1-5-0正式版发布.md
@@ -6,7 +6,7 @@
 
 [<img style="background-image: none; border-bottom: 0px; border-left: 0px; padding-left: 0px; padding-right: 0px; display: inline; border-top: 0px; border-right: 0px; padding-top: 0px" title="image_thumb21" border="0" alt="image_thumb21" src="/attachment/up/blog/images/1.5.0_13745/image_thumb21_thumb.jpg" width="500" height="281" />](/attachment/up/blog/images/1.5.0_13745/image_thumb21.jpg)
 
-<!--more--><p>更新说明：
+更新说明：
 
 1.5.0 (2011-11-13)
 
@@ -17,7 +17,5 @@
 3、新增一键分享功能。
 
 4、可定制主界面分享按钮。
-
-&#160;
 
 详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
