--- a/article/豆瓣电台2-0-3发布-.md
+++ b/article/豆瓣电台2-0-3发布-.md
@@ -1,6 +1,10 @@
 # 豆瓣电台2.0.3发布！
 
-可以在“常规设置”中选择音频输出设备，选择“默认”则会随系统默认输出设备的改变而自动更换输出设备（只有Win7才有的特性），所以不会再出现插入耳机后没声音之类的问题了。搜索专辑的功能也找回来了，不过作为一种迂回策略，每次搜索花费的时间变长了一些。默认会在暂停时隐藏桌面歌词，不过可以在“歌词设置”中取消这个功能。 <p>PS：由于本人正在北京实习，没什么时间，所以更新放缓。 <p>[下载地址](http://doubanfmcloud-client.stor.sinaapp.com/DoubanFMSetup_2.0.3.exe) <p>[备用下载地址](http://dl.dbank.com/c0hgvyk0oy) <h1>更新说明</h1> <p>1、增加输出设备的选择功能。
+可以在“常规设置”中选择音频输出设备，选择“默认”则会随系统默认输出设备的改变而自动更换输出设备（只有Win7才有的特性），所以不会再出现插入耳机后没声音之类的问题了。搜索专辑的功能也找回来了，不过作为一种迂回策略，每次搜索花费的时间变长了一些。默认会在暂停时隐藏桌面歌词，不过可以在“歌词设置”中取消这个功能。
+<p>PS：由于本人正在北京实习，没什么时间，所以更新放缓。
+<p>[下载地址](http://doubanfmcloud-client.stor.sinaapp.com/DoubanFMSetup_2.0.3.exe)
+<p>[备用下载地址](http://dl.dbank.com/c0hgvyk0oy) <h1>更新说明</h1>
+<p>1、增加输出设备的选择功能。
 
 2、专辑搜索功能回归。
 
