--- a/article/豆瓣电台2-0-6发布-.md
+++ b/article/豆瓣电台2-0-6发布-.md
@@ -2,12 +2,16 @@
 
 从现在开始，豆瓣电台更新为ClickOnce应用程序，不再需要安装程序，虽然2.0.5及之前版本的豆瓣电台仍可以收到2.0.6的更新，但一旦更新到2.0.6后之前的版本就没有用处了，请卸载。
 
- <form action="http://doubanfmcloud.sinaapp.com/publish/doubanfm.application"> <p><input type="submit" value="立即使用"> 
+ <form action="http://doubanfmcloud.sinaapp.com/publish/doubanfm.application">
+<p><input type="submit" value="立即使用"> 
 
-</form> <p>[<img title="DoubanFM_2.0.6" style="border-left-width: 0px; border-right-width: 0px; background-image: none; border-bottom-width: 0px; padding-top: 0px; padding-left: 0px; display: inline; padding-right: 0px; border-top-width: 0px" border="0" alt="DoubanFM_2.0.6" src="/attachment/up/blog/images/2.0.6_1039C/DoubanFM_2.0.6_thumb.jpg" width="644" height="225">](/attachment/up/blog/images/2.0.6_1039C/DoubanFM_2.0.6.jpg)
+</form>
+
+[<img title="DoubanFM_2.0.6" style="border-left-width: 0px; border-right-width: 0px; background-image: none; border-bottom-width: 0px; padding-top: 0px; padding-left: 0px; display: inline; padding-right: 0px; border-top-width: 0px" border="0" alt="DoubanFM_2.0.6" src="/attachment/up/blog/images/2.0.6_1039C/DoubanFM_2.0.6_thumb.jpg" width="644" height="225">](/attachment/up/blog/images/2.0.6_1039C/DoubanFM_2.0.6.jpg)
 
 # 更新说明
 
 1、增加多显示器的支持。桌面歌词可以选择输出显示器。
 
- <p>详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
+
+<p>详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
