remove <p> in markdown

--- a/article/豆瓣电台2-0-5发布-.md
+++ b/article/豆瓣电台2-0-5发布-.md
@@ -3,8 +3,13 @@
 修复登录状态无法保存的问题。
 
 [下载地址](http://doubanfmcloud-client.stor.sinaapp.com/DoubanFMSetup_2.0.5.exe)
-<p>[备用下载地址](http://dl.dbank.com/c0akqc5hmc)  <h1>更新说明</h1>
-<p>1、修复登录状态无法保存的问题。
+
+[备用下载地址](http://dl.dbank.com/c0akqc5hmc)
+
+# 更新说明
+
+1、修复登录状态无法保存的问题。
 
 
-<p>详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
+
+详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
