--- a/article/豆瓣电台2-0-7发布-.md
+++ b/article/豆瓣电台2-0-7发布-.md
@@ -6,7 +6,9 @@
 
 <input type="submit" value="立即使用"> 
 
-</form> <h1>[<img title="DoubanFM_2.0.7" style="border-top: 0px; border-right: 0px; background-image: none; border-bottom: 0px; padding-top: 0px; padding-left: 0px; border-left: 0px; display: inline; padding-right: 0px" border="0" alt="DoubanFM_2.0.7" src="/attachment/up/blog/images/2.0.7_11A5A/DoubanFM_2.0.7_thumb.jpg" width="644" height="387">](/attachment/up/blog/images/2.0.7_11A5A/DoubanFM_2.0.7.jpg)</h1> <h1>更新说明</h1>
+</form>
+
+# [<img title="DoubanFM_2.0.7" style="border-top: 0px; border-right: 0px; background-image: none; border-bottom: 0px; padding-top: 0px; padding-left: 0px; border-left: 0px; display: inline; padding-right: 0px" border="0" alt="DoubanFM_2.0.7" src="/attachment/up/blog/images/2.0.7_11A5A/DoubanFM_2.0.7_thumb.jpg" width="644" height="387">](/attachment/up/blog/images/2.0.7_11A5A/DoubanFM_2.0.7.jpg)
 
 # 更新说明
 
@@ -17,4 +19,5 @@
 3、修复切歌时间过长的问题。
 
 
-<p>详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
+
+详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
