--- a/article/豆瓣电台2-0-6发布-.md
+++ b/article/豆瓣电台2-0-6发布-.md
@@ -3,7 +3,8 @@
 从现在开始，豆瓣电台更新为ClickOnce应用程序，不再需要安装程序，虽然2.0.5及之前版本的豆瓣电台仍可以收到2.0.6的更新，但一旦更新到2.0.6后之前的版本就没有用处了，请卸载。
 
  <form action="http://doubanfmcloud.sinaapp.com/publish/doubanfm.application">
-<p><input type="submit" value="立即使用"> 
+
+<input type="submit" value="立即使用"> 
 
 </form>
 
@@ -14,4 +15,5 @@
 1、增加多显示器的支持。桌面歌词可以选择输出显示器。
 
 
-<p>详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
+
+详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
