remove <br/> in markdown

--- a/article/豆瓣电台1-0-3发布.md
+++ b/article/豆瓣电台1-0-3发布.md
@@ -2,7 +2,11 @@
 
 更新说明：
 
-1.0.3    <br />1、修复1.0.2中进度条不走动的BUG。     <br />2、重写窗口阴影的代码，动画不再卡。
+1.0.3
+
+1、修复1.0.2中进度条不走动的BUG。
+
+2、重写窗口阴影的代码，动画不再卡。
 
 截图：
 
