--- a/article/豆瓣电台1-5-1发布.md
+++ b/article/豆瓣电台1-5-1发布.md
@@ -2,6 +2,8 @@
 
 更新说明：
 
-1、修复DJ频道显示不完全的bug。   <br />2、修复复制链接失败时程序崩溃的bug。
+1、修复DJ频道显示不完全的bug。
+
+2、修复复制链接失败时程序崩溃的bug。
 
 详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
