--- a/article/豆瓣电台1-6-0发布.md
+++ b/article/豆瓣电台1-6-0发布.md
@@ -4,7 +4,21 @@
 
 可自定义歌词颜色！可自定义窗口背景！可设置主窗口字体！以及其他多项改进！请看大屏幕！
 
-1、增加自定义歌词和窗口背景颜色的功能。    <br />2、可设置主窗口的字体。     <br />3、加入帮助页面。     <br />4、长时间不播放音乐时自动下一首。     <br />5、第一次运行时增加滑动封面的提醒。     <br />6、改善字体选择。     <br />7、修复几个bug。     <br />8、其他细节改进。
+1、增加自定义歌词和窗口背景颜色的功能。
+
+2、可设置主窗口的字体。
+
+3、加入帮助页面。
+
+4、长时间不播放音乐时自动下一首。
+
+5、第一次运行时增加滑动封面的提醒。
+
+6、改善字体选择。
+
+7、修复几个bug。
+
+8、其他细节改进。
 
 下面是自定义的歌词效果！请看大屏幕！
 
