update video embeding

--- a/article/豆瓣电台功能演示.md
+++ b/article/豆瓣电台功能演示.md
@@ -2,4 +2,4 @@
 
 这是豆瓣电台1.2.4版的功能演示视频。软件下载地址：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
 
-<object width="480" height="400" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0"><param name="src" value="http://player.youku.com/player.php/sid/XMzAwNDgyNjg0/v.swf" /><param name="allowfullscreen" value="true" /><param name="quality" value="high" /><param name="allowscriptaccess" value="always" /><embed width="480" height="400" type="application/x-shockwave-flash" src="http://player.youku.com/player.php/sid/XMzAwNDgyNjg0/v.swf" allowfullscreen="true" quality="high" allowscriptaccess="always" /></object>
+<iframe height=498 width=510 src="http://player.youku.com/embed/XMzAwNDgyNjg0" frameborder=0 "allowfullscreen"></iframe>
