--- a/article/豆瓣电台1-2-5发布.md
+++ b/article/豆瓣电台1-2-5发布.md
@@ -18,7 +18,7 @@
 
 [http://v.youku.com/v_show/id_XMzAwNDgyNjg0.html](http://v.youku.com/v_show/id_XMzAwNDgyNjg0.html)
 
-<embed src="http://player.youku.com/player.php/sid/XMzAwNDgyNjg0/v.swf" allowFullScreen="true" quality="high" width="480" height="400" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed>
+<iframe height=498 width=510 src="http://player.youku.com/embed/XMzAwNDgyNjg0" frameborder=0 "allowfullscreen"></iframe>
 
 下载地址：
 
