update article URLs

--- a/article/修复验证码问题-豆瓣电台1-7-3发布.md
+++ b/article/修复验证码问题-豆瓣电台1-7-3发布.md
@@ -20,4 +20,4 @@ PS：强烈反对登录时必须输入验证码！
 
 4、增强稳定性。
 
-详细信息请看：[http://www.kfstorm.com/blog/doubanfm](http://www.kfstorm.com/blog/doubanfm)
+详细信息请看：[/article/doubanfm](/article/doubanfm)
