--- a/article/多项改进-豆瓣电台1-7-1发布.md
+++ b/article/多项改进-豆瓣电台1-7-1发布.md
@@ -30,4 +30,4 @@
 
 9、其他细节调整。
 
-详细信息请看：[http://www.kfstorm.com/blog/doubanfm](http://www.kfstorm.com/blog/doubanfm)
+详细信息请看：[/article/doubanfm](/article/doubanfm)
