--- a/article/更多歌词选项-豆瓣电台1-7-5发布-.md
+++ b/article/更多歌词选项-豆瓣电台1-7-5发布-.md
@@ -26,4 +26,4 @@
 
 7、修复多个小bug。
 
-详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
+详细信息请看：[/article/doubanfm](/article/doubanfm)
