--- a/article/豆瓣电台1-0-3发布.md
+++ b/article/豆瓣电台1-0-3发布.md
@@ -16,4 +16,4 @@
 
 [http://u.115.com/file/e6uh315b](http://u.115.com/file/e6uh315b)
 
-详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
+详细信息请看：[/article/doubanfm](/article/doubanfm)
