--- a/article/豆瓣电台1-0-4发布.md
+++ b/article/豆瓣电台1-0-4发布.md
@@ -22,4 +22,4 @@
 
 [http://u.115.com/file/cln4jsyc](http://u.115.com/file/cln4jsyc)
 
-详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
+详细信息请看：[/article/doubanfm](/article/doubanfm)
