--- a/article/豆瓣电台1-1-1发布.md
+++ b/article/豆瓣电台1-1-1发布.md
@@ -12,4 +12,4 @@
 
 [http://u.115.com/file/dncd6uwl](http://u.115.com/file/dncd6uwl)
 
-详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
+详细信息请看：[/article/doubanfm](/article/doubanfm)
