--- a/article/豆瓣电台1-2-2发布.md
+++ b/article/豆瓣电台1-2-2发布.md
@@ -12,4 +12,4 @@
 
 [http://u.115.com/file/dn6fw98v](http://u.115.com/file/dn6fw98v)
 
-详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
+详细信息请看：[/article/doubanfm](/article/doubanfm)
