--- a/article/豆瓣电台1-3-1发布.md
+++ b/article/豆瓣电台1-3-1发布.md
@@ -18,4 +18,4 @@
 
 3、解决1.3.0版本引入的播放DJ频道会报错的BUG。
 
-详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
+详细信息请看：[/article/doubanfm](/article/doubanfm)
