--- a/article/豆瓣电台1-4-1发布.md
+++ b/article/豆瓣电台1-4-1发布.md
@@ -18,4 +18,4 @@
 
 4、修复一个存储BUG，该BUG会使系统分区可用空间逐渐减小。
 
-详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
+详细信息请看：[/article/doubanfm](/article/doubanfm)
