--- a/article/豆瓣电台1-5-0-beta2发布.md
+++ b/article/豆瓣电台1-5-0-beta2发布.md
@@ -24,4 +24,4 @@
 
 5、增加“显示/隐藏 歌词”的热键。
 
-详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
+详细信息请看：[/article/doubanfm](/article/doubanfm)
