--- a/article/豆瓣电台1-5-0正式版发布.md
+++ b/article/豆瓣电台1-5-0正式版发布.md
@@ -18,4 +18,4 @@
 
 4、可定制主界面分享按钮。
 
-详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
+详细信息请看：[/article/doubanfm](/article/doubanfm)
