--- a/article/豆瓣电台1-6-0发布.md
+++ b/article/豆瓣电台1-6-0发布.md
@@ -42,4 +42,4 @@
 
 观众朋友们，我们下期再见！
 
-详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
+详细信息请看：[/article/doubanfm](/article/doubanfm)
