--- a/article/豆瓣电台1-6-2发布.md
+++ b/article/豆瓣电台1-6-2发布.md
@@ -14,4 +14,4 @@
 
 PS：想要双行歌词的人多吗？
 
-详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
+详细信息请看：[/article/doubanfm](/article/doubanfm)
