--- a/article/豆瓣电台1-7-6发布-.md
+++ b/article/豆瓣电台1-7-6发布-.md
@@ -22,4 +22,4 @@
 
 6、设置代理时支持用户名密码，并支持不使用任何代理。
 
-详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
+详细信息请看：[/article/doubanfm](/article/doubanfm)
