--- a/article/豆瓣电台1-8-0发布.md
+++ b/article/豆瓣电台1-8-0发布.md
@@ -10,4 +10,4 @@
 
 1、支持新版DJ兆赫。
 
-详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
+详细信息请看：[/article/doubanfm](/article/doubanfm)
