--- a/article/豆瓣电台2-0-2发布-.md
+++ b/article/豆瓣电台2-0-2发布-.md
@@ -24,4 +24,4 @@
 
 8、搜索DJ兆赫时大小写不敏感。
 
-详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
+详细信息请看：[/article/doubanfm](/article/doubanfm)
