--- a/article/豆瓣电台2-0-3发布-.md
+++ b/article/豆瓣电台2-0-3发布-.md
@@ -18,4 +18,4 @@ PS：由于本人正在北京实习，没什么时间，所以更新放缓。
 
 4、bug修复，细节改进。
 
-详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
+详细信息请看：[/article/doubanfm](/article/doubanfm)
