--- a/article/豆瓣电台1-3-2发布.md
+++ b/article/豆瓣电台1-3-2发布.md
@@ -18,4 +18,4 @@
 
 5、以后更新时不再出现安装界面
 
-详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
+详细信息请看：[/article/doubanfm](/article/doubanfm)
