--- a/article/豆瓣电台1-4-0发布.md
+++ b/article/豆瓣电台1-4-0发布.md
@@ -18,4 +18,4 @@
 
 2、增加歌词同步显示。
 
-详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
+详细信息请看：[/article/doubanfm](/article/doubanfm)
