--- a/article/豆瓣电台1-5-1发布.md
+++ b/article/豆瓣电台1-5-1发布.md
@@ -6,4 +6,4 @@
 
 2、修复复制链接失败时程序崩溃的bug。
 
-详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
+详细信息请看：[/article/doubanfm](/article/doubanfm)
