--- a/article/豆瓣电台1-6-1发布.md
+++ b/article/豆瓣电台1-6-1发布.md
@@ -10,4 +10,4 @@
 
 [http://doubanfmcloud-client.stor.sinaapp.com/DoubanFMSetup_1.6.1.exe](http://doubanfmcloud-client.stor.sinaapp.com/DoubanFMSetup_1.6.1.exe)
 
-详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
+详细信息请看：[/article/doubanfm](/article/doubanfm)
