--- a/article/豆瓣电台1-7-7发布.md
+++ b/article/豆瓣电台1-7-7发布.md
@@ -12,4 +12,4 @@
 
 2、暂时移除了DJ兆赫。
 
-详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
+详细信息请看：[/article/doubanfm](/article/doubanfm)
