--- a/article/豆瓣电台2-0-1发布-.md
+++ b/article/豆瓣电台2-0-1发布-.md
@@ -12,4 +12,4 @@
 
 1、增强稳定性。
 
-详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
+详细信息请看：[/article/doubanfm](/article/doubanfm)
