--- a/article/豆瓣电台2-0-4发布-.md
+++ b/article/豆瓣电台2-0-4发布-.md
@@ -32,4 +32,4 @@ Enjoy~
 
 
 
-详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
+详细信息请看：[/article/doubanfm](/article/doubanfm)
