--- a/article/豆瓣电台2-0-6发布-.md
+++ b/article/豆瓣电台2-0-6发布-.md
@@ -16,4 +16,4 @@
 
 
 
-详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
+详细信息请看：[/article/doubanfm](/article/doubanfm)
