--- a/article/豆瓣电台2-0-9发布-.md
+++ b/article/豆瓣电台2-0-9发布-.md
@@ -14,4 +14,4 @@
 
 2、增加豆瓣官方的歌词源。
 
-详细信息请看：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
+详细信息请看：[/article/doubanfm](/article/doubanfm)
