--- a/article/豆瓣电台功能演示.md
+++ b/article/豆瓣电台功能演示.md
@@ -1,5 +1,5 @@
 # 豆瓣电台功能演示
 
-这是豆瓣电台1.2.4版的功能演示视频。软件下载地址：[http://www.kfstorm.com/blog/doubanfm/](http://www.kfstorm.com/blog/doubanfm/)
+这是豆瓣电台1.2.4版的功能演示视频。软件下载地址：[/article/doubanfm](/article/doubanfm)
 
 <iframe height=498 width=510 src="http://player.youku.com/embed/XMzAwNDgyNjg0" frameborder=0 "allowfullscreen"></iframe>
