optimize link text

--- a/article/搜索功能修复-豆瓣电台1-7-2发布.md
+++ b/article/搜索功能修复-豆瓣电台1-7-2发布.md
@@ -12,4 +12,4 @@
 
 备用下载地址：[http://dl.dbank.com/c0l2rvyl8b](http://dl.dbank.com/c0l2rvyl8b)
 
-详细信息请看：[/article/doubanfm](/article/doubanfm)
+详细信息请看：[链接](/article/doubanfm)
