--- a/article/豆瓣电台1-2-0发布.md
+++ b/article/豆瓣电台1-2-0发布.md
@@ -22,4 +22,4 @@
 
 [http://u.115.com/file/bh50o60c](http://u.115.com/file/bh50o60c)
 
-详细信息请看：[/article/doubanfm](/article/doubanfm)
+详细信息请看：[链接](/article/doubanfm)
