--- a/article/豆瓣电台1-2-0测试版发布.md
+++ b/article/豆瓣电台1-2-0测试版发布.md
@@ -10,4 +10,4 @@
 
 [http://u.115.com/file/dncwtcln](http://u.115.com/file/dncwtcln)
 
-详细信息请看：[/article/doubanfm](/article/doubanfm)
+详细信息请看：[链接](/article/doubanfm)
