--- a/article/豆瓣电台1-2-3发布.md
+++ b/article/豆瓣电台1-2-3发布.md
@@ -16,4 +16,4 @@
 
 [http://115.com/file/aqzwe58q](http://115.com/file/aqzwe58q)
 
-详细信息请看：[/article/doubanfm](/article/doubanfm)
+详细信息请看：[链接](/article/doubanfm)
