--- a/article/豆瓣电台1-2-4发布.md
+++ b/article/豆瓣电台1-2-4发布.md
@@ -30,4 +30,4 @@
 
 [http://115.com/file/clge9d4l](http://115.com/file/clge9d4l)
 
-详细信息请看：[/article/doubanfm](/article/doubanfm)
+详细信息请看：[链接](/article/doubanfm)
