--- a/article/豆瓣电台2-0-8发布-.md
+++ b/article/豆瓣电台2-0-8发布-.md
@@ -18,4 +18,4 @@ PS：无法打开.application格式的用户，或者嫌ClickOnce安装麻烦、
 
 2、减少客户端一直显示“请稍候”情形的出现。
 
-详细信息请看：[/article/doubanfm](/article/doubanfm)
+详细信息请看：[链接](/article/doubanfm)
