--- a/article/豆瓣电台1-1-0发布.md
+++ b/article/豆瓣电台1-1-0发布.md
@@ -20,4 +20,4 @@
 
 [http://u.115.com/file/dncdzdf3](http://u.115.com/file/dncdzdf3)
 
-详细信息请看：[/article/doubanfm](/article/doubanfm)
+详细信息请看：[链接](/article/doubanfm)
