--- a/article/豆瓣电台1-3-0发布.md
+++ b/article/豆瓣电台1-3-0发布.md
@@ -28,4 +28,4 @@
 
 [<img style="background-image: none; border-bottom: 0px; border-left: 0px; padding-left: 0px; padding-right: 0px; display: inline; border-top: 0px; border-right: 0px; padding-top: 0px" title="image10" border="0" alt="image10" src="/attachment/up/blog/images/1.3.0_13B6B/image10_thumb.jpg" width="500" height="254" />](/attachment/up/blog/images/1.3.0_13B6B/image10.jpg)
 
-详细信息请看：[/article/doubanfm](/article/doubanfm)
+详细信息请看：[链接](/article/doubanfm)
