--- a/article/豆瓣电台功能演示视频第二版.md
+++ b/article/豆瓣电台功能演示视频第二版.md
@@ -4,4 +4,4 @@
 
 <iframe height=498 width=510 src="http://player.youku.com/embed/XMzQ0MDczMjQ4" frameborder=0 "allowfullscreen"></iframe>
 
-详细信息请看：[/article/doubanfm](/article/doubanfm)
+详细信息请看：[链接](/article/doubanfm)
